--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -60,6 +60,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
+          flutter-version: 3.38.1
 
       - name: Install Dependencies
         run: flutter pub get
