--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           submodules: "true"
 
+      - name: Echo PWD
+        run: echo "Current directory: $PWD"
+
       - name: Get tag
         id: get_tag
         shell: bash
