--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Zip App
         run: |
-          Compress-Archive -Path build/windows/x64/runner/Release/* -DestinationPath build/AlQuran-${{ steps.get_tag.outputs.clean_version }}-x64.zip
+          Compress-Archive -Path build/windows/x64/runner/Release/* -DestinationPath build/AlQuran-${{ steps.get_tag.outputs.clean_version }}-windows-x64.zip
       
       - name: Create msix for store
         run: dart run msix:create --store --release --architecture x64 --output-name AlQuran_for_microsoft_store --output-path ./
