--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -70,10 +70,11 @@ jobs:
         run: |
           echo "C:/Program Files (x86)/Inno Setup 6" >> $GITHUB_PATH
           iscc al_quran.iss
+          Move-Item build/AlQuran-Windows-Installer.exe "build/AlQuran-$env:CLEAN_VERSION-windows-x86_64-installer.exe"
 
       - name: Zip Portable
         run: |
-          Compress-Archive -Path build/windows/x64/runner/Release/* -DestinationPath build/AlQuran-${{ steps.get_tag.outputs.clean_version }}-windows-x64-portable.zip
+          Compress-Archive -Path build/windows/x64/runner/Release/* -DestinationPath build/AlQuran-${{ steps.get_tag.outputs.clean_version }}-windows-x86_64-portable.zip
 
       # - name: Create msix for store
       #   run: dart run msix:create --store --release --architecture x64 --output-name AlQuran_for_microsoft_store --output-path ./
@@ -89,4 +90,4 @@ jobs:
           replacesArtifacts: true
           updateOnlyUnreleased: false
           # artifacts: AlQuran_for_microsoft_store.msix,build/AlQuran*.zip
-          artifacts: build/AlQuran*.zip,build/AlQuran-Windows-Installer.exe
+          artifacts: build/AlQuran*.zip,build/AlQuran*.exe
