fix: replace _ with -

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "io.github.meypod.al_quran" "\0"
+            VALUE "CompanyName", "io.github.meypod.al-quran" "\0"
             VALUE "FileDescription", "al_quran" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "al_quran" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 io.github.meypod.al_quran. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 io.github.meypod.al-quran. All rights reserved." "\0"
             VALUE "OriginalFilename", "al_quran.exe" "\0"
             VALUE "ProductName", "al_quran" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
