--- a/linux/al_quran.desktop
+++ b/linux/al_quran.desktop
@@ -3,5 +3,5 @@ Type=Application
 Name=Al-Quran
 Comment=A simple open-source Quran reader
 Exec=al_quran
-Icon=io.github.meypod.al_quran
+Icon=io.github.meypod.al-quran
 Categories=Education;X-Religion;
