--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = al_quran
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = io.github.meypod.al_quran
+PRODUCT_BUNDLE_IDENTIFIER = io.github.meypod.al-quran
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 io.github.meypod.al_quran. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 io.github.meypod.al-quran. All rights reserved.
